--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,56 @@
-version: '3.4'
+version: "3.4"
 
 services:
+
+  tensorflow-servings:
+    image: tensorflow/serving:latest
+    ports:
+      - 8501:8501
+    environment: 
+      - MODEL_NAME=movie_model
+    volumes: 
+      - ./ai-model/model:/models/movie_model
+    depends_on: [mongo]  
+    networks:
+      - ytScannerNetwork
+
+  mongo:
+    image: "mongo"
+    container_name: "movieDB"
+    environment: 
+      - MONGO_INITDB_DATABASE=movieRecommenderDB
+    volumes:
+      - ./mongo-volume:/data/db
+    ports: 
+      - 27016:27016
+    networks:
+      - ytScannerNetwork
+  
+  backend:
+    build:
+      context: backend/
+      dockerfile: Dockerfile
+    image: movie-backend
+    ports:
+      - 8000:8000
+    depends_on: ["mongo"]
+    environment: 
+      - MONGOHOST=mongo
+      - TF_SERVING_HOST=tensorflow-servings  
+    networks:
+      - ytScannerNetwork
+
   frontend:
-    image: frontend
-    tty: true
     build:
-      context: ./frontend/.devcontainer
-      dockerfile: ./Dockerfile
-    volumes:
-      - .:/workspace:cached
-    depends_on:
-      - api
+      context: frontend/
+      dockerfile: Dockerfile
+    image: movie-frontend
     ports:
-      - "8000:8000"
+      - 5000:5000
+    depends_on: ["backend"]
     networks:
-      - myNetwork
-
-  api:
-    image: api
-    tty: true
-    build:
-      context: ./api/.devcontainer
-      dockerfile: ./Dockerfile
-    volumes:
-      - .:/workspace:cached
-    networks:
-      - myNetwork
-
-  redissever:
-    image: redis
-    volumes:
-      - ./redis/redis-data:/data
-    ports:
-      - "6379:6379"
-    command:
-      # Save if 100 keys are added in every 10 seconds
-      - "--save 10 100"
-    networks:
-      - myNetwork
+      - ytScannerNetwork
 
 networks:
-  myNetwork:
+  ytScannerNetwork:
     driver: bridge
-
