elastic, elasticvue added

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -2,6 +2,37 @@ version: "3.4"
 
 services:
 
+  es01: # service name (also used as host name)
+    image: elasticsearch:7.17.6
+    env_file:
+      - ./elasticsearch/es.env
+    environment: # (see https://www.elastic.co/guide/en/elasticsearch/reference/7.17/docker.html)
+      - discovery.type=single-node # single-node cluster
+      - bootstrap.memory_lock=true # disable swapping
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=true # enable security/basic authentication
+      - node.name=es01
+      - cluster.name=es-docker-single-cluster
+      # required for the elasticvue UI (see https://elasticvue.com/usage)
+      - http.cors.enabled=true
+      - http.cors.allow-origin=http://localhost:8080
+      - http.cors.allow-headers=X-Requested-With,Content-Type,Content-Length,Authorization
+    ulimits:
+      memlock: # disables swapping (see https://www.elastic.co/guide/en/elasticsearch/reference/7.17/docker.html)
+        soft: -1
+        hard: -1
+    volumes:
+      - ./elasticsearch/esdata01:/usr/share/elasticsearch/data # persist elasticsearch data
+    ports:
+      - 9200:9200 # make port 9200 accessible for the host
+
+  elasticvue: # service name (also used as host name)
+    # to use it, port 9200 of es01 must be published
+    image: cars10/elasticvue:0.42.1
+    ports:
+      - 8080:8080 # make port 8080 accessible for the host
+    depends_on: ["es01"]
+
 
   middleware:
     build: # instead of an image, build the service from a dockerfile
@@ -22,10 +53,10 @@ services:
     build:
       context: frontend/
       dockerfile: Dockerfile
-    image: movie-frontend
+    image: frontend
     ports:
       - 5000:5000
-    depends_on: ["backend"]
+    depends_on: ["middleware"]
     networks:
       - ytScannerNetwork
 
