Delete ES files

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -94,7 +94,7 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - ./elasticsearch/esdata01:/usr/share/elasticsearch/data # persist elasticsearch data
+      - esdata01:/usr/share/elasticsearch/data # persist elasticsearch data
       - certs:/usr/share/elasticsearch/config/certs
     ports:
       - 9200:9200 # make port 9200 accessible for the host
@@ -185,6 +185,8 @@ volumes:
   certs:
     driver: local
   kibanadata:
+    driver: local
+  esdata01:
     driver: local
 
 networks:
