--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -181,6 +181,15 @@ services:
     networks:
       - ytScannerNetwork
 
+  models:
+    container_name: models
+    build:
+      context: models/
+      dockerfile: Dockerfile
+    image: models 
+    networks:
+      - ytScannerNetwork
+
 
 
 volumes:
