frontend layout and style changed

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -177,6 +177,8 @@ services:
       context: frontend/
       dockerfile: Dockerfile
     image: frontend
+    volumes:
+      - ./frontend:/usr/source/app
     ports:
       - 5000:5000
     depends_on: ["middleware"]
