sending video_id from front to middleware enabled

--- a/.env
+++ b/.env
@@ -27,6 +27,8 @@ KIBANA_PORT=5601
 # Increase or decrease based on the available host memory (in bytes)
 MEM_LIMIT=1073741824
 
+API_DEBUG=1
+
 # Project namespace (defaults to the current folder name if not set)
 #COMPOSE_PROJECT_NAME=myproject
 
