--- a/middleware/Dockerfile
+++ b/middleware/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.10.8
 
 WORKDIR /code
 
+#COPY requirements.txt .
+#COPY app/data_retriever.py ./app
+
+COPY . .
 COPY requirements.txt .
 
 RUN pip install --upgrade pip
