Co-authored-by: Vivian K <vivkaz@users.noreply.github.com> Co-authored-by: almasria <almasria@users.noreply.github.com>

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -139,6 +139,7 @@ services:
     volumes:
       - certs:/usr/share/kibana/config/certs
       - kibanadata:/usr/share/kibana/data
+      - ./frontend/kibana_data:/usr/share/kibana/data
     networks:
       - ytScannerNetwork
     mem_limit: ${MEM_LIMIT}
