Updating third party tool config file

--- a/yt-spammer-purge/SpamPurgeConfig.ini
+++ b/yt-spammer-purge/SpamPurgeConfig.ini
@@ -273,7 +273,7 @@ log_mode = plaintext
 	# Allows you to ALSO create a json version of the logged match data (in addition to normal log file)
 	# Note: If enable_logging is False, that also disables json logging regardless of this setting
 	# Default = False  --  Possible Values: True | False
-json_log = False
+json_log = True
 
 	# Sets the encoding method to be used in the json file, if you want to change it for some reason
 	# Just be sure to pick one that supports all unicode characters
@@ -286,7 +286,7 @@ json_extra_data = True
 
 	# Whether to log all comments scanned, whether flagged as spam or not. Flagged comments will have a label in the json object
 	# Default = False -- Possible Values: True | False
-json_log_all_comments = False
+json_log_all_comments = True
 
 	# Whether to also fetch profile pictures for matched commeters when in json logging mode, and the video uploader's too
 	# Images will be stored in the log_path, then in a folder with the same naming scheme (date/time) as the log accompanying log file
