Co-authored-by: Vivian Kazakova <vivkaz@users.noreply.github.com> Co-authored-by: almasria <almasria@users.noreply.github.com>

--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -168,6 +168,7 @@ services:
     volumes:
       - ./middleware/app:/code/app # for code changes
       - ./models/data:/code/data
+      - ./dataset:/code/dataset
       - ./models/saved_models:/code/saved_models
     networks:
       - ytScannerNetwork
